--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:       Type
-email:       ''
-description: ''
+title:       Josef Weber
+email:       'josef.weber@oracle.com'
+description: '🏍 💻 🎸'
 baseurl:     '' # The subpath of your site, e.g. /blog
 url:         'https://type-jekyll.aspirethemes.com/' # The base hostname & protocol for your site
 twitter:     ''
-github:      ''
+github:      'https://github.com/weberjoe'
 instagram:   ''
 facebook:    ''
 
